// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[LeftMenu] renders successfully 1`] = `
<aside
  className="menu"
>
  <span
    className="hamburger item"
    role="button"
    title="menu"
  />
  <ProfileMenu
    navigationItems={Array []}
  />
  <span
    className="item download"
    title="Download"
  >
    <Icon
      type="download"
    />
  </span>
</aside>
`;

exports[`[LeftMenu] when has navigation items renders successfully 1`] = `
<aside
  className="menu"
>
  <span
    className="hamburger item"
    role="button"
    title="menu"
  />
  <ProfileMenu
    navigationItems={
      Array [
        Object {
          "icon": "phone",
          "path": "",
        },
        Object {
          "icon": "user",
          "path": "user",
        },
      ]
    }
  />
  <span
    className="item download"
    title="Download"
  >
    <Icon
      type="download"
    />
  </span>
</aside>
`;
